--- a/profile/themes/smc_base/scss/elements/node-elements.scss
+++ b/profile/themes/smc_base/scss/elements/node-elements.scss
@@ -21,7 +21,7 @@ body.page-node .node .action-links-field-collection-add {
 .page-node .node .field-name-field-thumbnail-image {
   float: left;
   clear: none;
-  margin-right: 10px;
+  margin-right: 40px;
   max-width: 40%;
   
   img {
